[metadata]
name = find-arduino
url = https://github.com/ianhi/detect-arduino
author = Ian Hunt-Isaak}}
author_email = ianhuntisaak@gmail.com
license = BSD-3 Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    'BSD license': 'License :: OSI Approved :: BSD License',
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/ianhi/detect-arduino

[options]
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    pyserial

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503
