[metadata]
name = find_arduino
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianhi/detect-arduino
author = Ian Hunt-Isaak}}
author_email = ianhuntisaak@gmail.com
license = BSD-3 Clause
classifiers =
    'BSD license': 'License :: OSI Approved :: BSD License',
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Source Code =https://github.com/ianhi/detect-arduino

[options]
packages = find:
install_requires =
    pyserial
python_requires = >=3.8
setup_requires =
    setuptools-scm

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503
